feat: add .editorconfig for HTML

--- a/.editorconfig
+++ b/.editorconfig
@@ -25,3 +25,8 @@ ij_wrap_on_typing = true
 [**.yml, **.yalm]
 indent_style = space
 indent_size = 2
+
+
+[**.html]
+indent_style = space
+indent_size = 2
