fix: docker make and composer

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ DB_VERSION=latest
 NGINX_VERSION=alpine
 COMPOSER_VERSION=latest
 
-COMPOSER_CONTAINER_NAME=compser-docker
+COMPOSER_CONTAINER_NAME=composer
 NGINX_CONTAINER_NAME=nginx-webserver
-DB_CONTAINER_NAME=mysql-db
+DB_CONTAINER_NAME=db
 APP_CONTAINER_NAME=php-app
 
 
