feat: adding connection to the shell of each container as well as update .env

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,7 @@ COMPOSER_VERSION=latest
 COMPOSER_CONTAINER_NAME=composer
 NGINX_CONTAINER_NAME=nginx-webserver
 DB_CONTAINER_NAME=db
-APP_CONTAINER_NAME=php-app
-
+APP_CONTAINER_NAME=app
 
 DB_CONNECTION=mysql
 DB_HOST=db
