fix: user on docker that will not do the up

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ DB_PASSWORD=pass
 
 NGINX_INTERNAL_PORT=80
 NGINX_EXTERNAL_PORT=80
+
+DOCKER_APP_UUID=1000
+DOCKER_NGINX_UUID=1000
+DOCKER_DB_UUID=1000
+DOCKER_COMPOSER_UUID=1000
